--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -6,12 +6,20 @@
 #    By: ccambium <ccambium@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/17 15:10:19 by ccambium          #+#    #+#              #
-#    Updated: 2022/10/17 15:11:36 by ccambium         ###   ########.fr        #
+#    Updated: 2022/10/25 18:21:32 by ccambium         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CXXFLAGS= -Werror -Wall -Wextra
 CXX=c++
-SRCS=main.cpp
+SRCS=megaphone.cpp
 NAME=megaphone
+OBJS=$(SRCS:.cpp=.o)
 
+all: $(NAME)
+
+$(NAME): $(OBJS)
+	$(CXX) $(CXXFLAGS) $(OBJS) -o $(NAME)
+
+%.o: %.c
+	$(CXX) $(CXXFLAGS) -c $< -o $@	
