--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: ccambium <ccambium@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/17 15:10:19 by ccambium          #+#    #+#              #
-#    Updated: 2022/10/25 18:50:48 by ccambium         ###   ########.fr        #
+#    Updated: 2022/10/27 09:07:45 by ccambium         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,11 +15,19 @@ CXX=c++
 SRCS=phonebook.cpp
 NAME=phonebook
 OBJS=$(SRCS:.cpp=.o)
-
+RM=rm -f
 all: $(NAME)
 
 $(NAME): $(OBJS)
 	$(CXX) $(CXXFLAGS) $(OBJS) -o $(NAME)
 
 %.o: %.c
-	$(CXX) $(CXXFLAGS) -c $< -o $@	
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+clean:
+	$(RM) $(OBJS)
+
+fclean: clean
+	$(RM) $(NAME)
+
+re: fclean all
