--- a/cpp01/ex04/Makefile
+++ b/cpp01/ex04/Makefile
@@ -5,15 +5,16 @@
 #                                                     +:+ +:+         +:+      #
 #    By: ccambium <ccambium@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/01/11 12:31:51 by ccambium          #+#    #+#              #
-#    Updated: 2023/01/11 12:32:12 by ccambium         ###   ########.fr        #
+#    Created: 2023/01/11 12:13:28 by ccambium          #+#    #+#              #
+#    Updated: 2023/01/11 12:14:44 by ccambium         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CXXFLAGS= -Werror -Wall -Wextra
 CXX=c++
-SRCS=main.cpp
-NAME=Cast
+SRCS=main.cpp\
+	sedIsForLosers.cpp
+NAME=sedIsForLosers
 OBJS=$(SRCS:.cpp=.o)
 
 all: $(NAME)
