--- a/cpp04/ex02/Makefile
+++ b/cpp04/ex02/Makefile
@@ -5,15 +5,19 @@
 #                                                     +:+ +:+         +:+      #
 #    By: ccambium <ccambium@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/01/11 12:31:51 by ccambium          #+#    #+#              #
-#    Updated: 2023/01/11 12:32:12 by ccambium         ###   ########.fr        #
+#    Created: 2023/01/11 12:25:48 by ccambium          #+#    #+#              #
+#    Updated: 2023/01/11 12:26:29 by ccambium         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CXXFLAGS= -Werror -Wall -Wextra
 CXX=c++
-SRCS=main.cpp
-NAME=Cast
+SRCS=Animal.cpp\
+	Dog.cpp\
+	Cat.cpp\
+	Brain.cpp\
+	main.cpp
+NAME=Animal
 OBJS=$(SRCS:.cpp=.o)
 
 all: $(NAME)
