--- a/cpp07/ex01/Makefile
+++ b/cpp07/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: ccambium <ccambium@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/11 12:34:49 by ccambium          #+#    #+#              #
-#    Updated: 2023/01/11 12:35:03 by ccambium         ###   ########.fr        #
+#    Updated: 2023/01/30 03:53:00 by ccambium         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,7 +22,7 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	$(CXX) $(CXXFLAGS) $(OBJS) -o $(NAME)
 
-%.o: %.c
+%.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@	
 
 clean:
