--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -6,16 +6,18 @@
 #    By: ccambium <ccambium@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/11 12:22:52 by ccambium          #+#    #+#              #
-#    Updated: 2023/01/30 03:53:00 by ccambium         ###   ########.fr        #
+#    Updated: 2023/02/06 13:58:05 by ccambium         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-CXXFLAGS= -Werror -Wall -Wextra
+CXXFLAGS= -Werror -Wall -Wextra -std=c++98
 CXX=c++
 SRCS=Animal.cpp\
 	Dog.cpp\
 	Cat.cpp\
-	main.cpp
+	main.cpp\
+	WrongAnimal.cpp\
+	WrongCat.cpp
 NAME=Animal
 OBJS=$(SRCS:.cpp=.o)
 
@@ -28,9 +30,9 @@ $(NAME): $(OBJS)
 	$(CXX) $(CXXFLAGS) -c $< -o $@	
 
 clean:
-	rm $(OBJS)
+	rm -f $(OBJS)
 
 fclean: clean
-	rm $(NAME)
+	rm -f $(NAME)
 
 re: fclean all
