--- a/cpp05/ex03/Makefile
+++ b/cpp05/ex03/Makefile
@@ -6,7 +6,7 @@
 #    By: ccambium <ccambium@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/11 12:30:37 by ccambium          #+#    #+#              #
-#    Updated: 2023/01/30 03:53:00 by ccambium         ###   ########.fr        #
+#    Updated: 2023/02/14 18:08:42 by ccambium         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,7 +16,7 @@ SRCS=AForm.cpp\
 	Bureaucrat.cpp\
 	Intern.cpp\
 	main.cpp\
-	PresidencialPardonForm.cpp\
+	PresidentialPardonForm.cpp\
 	RobotomyRequestForm.cpp\
 	ShrubberyCreationForm.cpp
 NAME=Bureaucrat
@@ -31,9 +31,9 @@ $(NAME): $(OBJS)
 	$(CXX) $(CXXFLAGS) -c $< -o $@	
 
 clean:
-	rm $(OBJS)
+	rm -f $(OBJS)
 
 fclean: clean
-	rm $(NAME)
+	rm -f $(NAME)
 
 re: fclean all
