--- a/cpp07/ex00/Makefile
+++ b/cpp07/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: ccambium <ccambium@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/11 12:33:19 by ccambium          #+#    #+#              #
-#    Updated: 2023/01/30 03:53:00 by ccambium         ###   ########.fr        #
+#    Updated: 2023/02/15 14:14:58 by ccambium         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -28,9 +28,9 @@ $(NAME): $(OBJS)
 	$(CXX) $(CXXFLAGS) -c $< -o $@	
 
 clean:
-	rm $(OBJS)
+	rm -f $(OBJS)
 
 fclean: clean
-	rm $(NAME)
+	rm -f $(NAME)
 
 re: fclean all
