--- a/cpp07/ex00/Makefile
+++ b/cpp07/ex00/Makefile
@@ -6,16 +6,13 @@
 #    By: ccambium <ccambium@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/11 12:33:19 by ccambium          #+#    #+#              #
-#    Updated: 2023/02/15 14:14:58 by ccambium         ###   ########.fr        #
+#    Updated: 2023/02/21 18:21:18 by ccambium         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CXXFLAGS= -Werror -Wall -Wextra
 CXX=c++
-SRCS=main.cpp\
-	max.cpp\
-	min.cpp\
-	swap.cpp
+SRCS=main.cpp
 NAME=Templates
 OBJS=$(SRCS:.cpp=.o)
 
