--- a/cpp06/ex01/Makefile
+++ b/cpp06/ex01/Makefile
@@ -6,14 +6,15 @@
 #    By: ccambium <ccambium@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/11 12:32:18 by ccambium          #+#    #+#              #
-#    Updated: 2023/02/15 13:03:44 by ccambium         ###   ########.fr        #
+#    Updated: 2023/02/22 19:10:25 by ccambium         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CXXFLAGS= -Werror -Wall -Wextra
 CXX=c++
 SRCS=Data.cpp\
-	main.cpp
+	main.cpp\
+	Serializer.cpp
 NAME=Cast
 OBJS=$(SRCS:.cpp=.o)
 
