--- a/cpp08/ex02/Makefile
+++ b/cpp08/ex02/Makefile
@@ -6,14 +6,13 @@
 #    By: ccambium <ccambium@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/11 12:39:30 by ccambium          #+#    #+#              #
-#    Updated: 2023/02/15 14:15:29 by ccambium         ###   ########.fr        #
+#    Updated: 2023/03/06 15:08:31 by ccambium         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-CXXFLAGS= -Werror -Wall -Wextra
+CXXFLAGS= -Werror -Wall -Wextra --std=c++98
 CXX=c++
-SRCS=MutantStack.cpp\
-	main.cpp
+SRCS=main.cpp
 NAME=MutantStack
 OBJS=$(SRCS:.cpp=.o)
 
